fix: enhance code